--- a/demos/flask-sklearn/Dockerfile
+++ b/demos/flask-sklearn/Dockerfile
@@ -1,10 +1,15 @@
 FROM python:3.7.3-stretch
 
-## Complete Step 1:
-# Create a Working Directory
+# Working Directory
+WORKDIR /app
 
-## Complete Step 2:
 # Copy source code to working directory
+COPY . app.py /app/
+
+# Install packages from requirements.txt
+# hadolint ignore=DL3013
+RUN pip install --upgrade pip &&\
+    pip install --trusted-host pypi.python.org -r requirements.txt
 
 ## Complete Step 3:
 # Install packages from requirements.txt
